fix: line wrap

--- a/static/styles.css
+++ b/static/styles.css
@@ -361,7 +361,7 @@ h3 {
 
     #home h1 {
         font-size: 5vh;
-        line-height: 1vw;
+        line-height: 1em;
     }
 
     #home h2 {
